--- a/popup.css
+++ b/popup.css
@@ -1,14 +1,19 @@
 body {
   margin: 10px;
-  background-color: rgb(54, 178, 250);
+  background-color: #224;
+  color: #ccd;
   font-family: sans-serif;
 }
 
 h1 {
   font-size: 15px;
-  color: #000000;
   text-align: center;
 }
 li {
   justify-content: left;
+  padding: 4pt 0 4pt 0;
+}
+input {
+    width: 80%;
+    display: block;
 }
